Fixes camera force on mobile devices

--- a/public/style.css
+++ b/public/style.css
@@ -179,13 +179,14 @@ body {
 
 .upload_container{
   width: 100%;
+  height: 18em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
 .thumbnail{
-  width: 30em;
+  width: 15em;
   margin-bottom: .5em;
 }
 
